# NixWhisper

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PRD.md  README.md  TODO.md  check_qt_screens.py  constraints.txt  debug_positioning.py  debug_screen_mismatch.py  diagnose_overlay_issue.py  diagnose_screens.py  newtasks.md  pyproject.toml  quick_live_test.py  requirements.txt  setup.py  simple_qt_test.py  test_cross_application.py  test_cursor_enhanced.py  test_cursor_positioning_live.py  test_cursor_tracking.py  test_final_demo.py  test_fixed_positioning.py  test_fullscreen_apps.py  test_multimonitor_cursor_positioning.py  test_multimonitor_summary.py  test_overlay_integration.py  test_overlay_monitor.py  test_overlay_multimonitor.py  test_overlay_positioning.py  test_overlay_regression.py  test_performance_profiling.py  test_positioning_issue.py  test_screen_geometry.py  test_screen_layout.py  (+4 more)
.cursor/rules/: code-style-guide.md  create-prd.md  process-task-list.md
.taskmaster/: config.json
.windsurf/workflows/: build-feature.md  build-next.md
config/: config.json
data/: config.json  nixwhisper.desktop
models/: README.md
src/nixwhisper/: __init__.py  __main__.py  audio.py  cli.py  config.py  gui.py  input.py  input.py.bak  main.py  microphone.py  model_manager.py  qt_gui.py  universal_typing.py  whisper_model.py  x11_cursor.py
src/nixwhisper/models/: __init__.py
src/nixwhisper/models/base.en/: .gitkeep
src/nixwhisper/scripts/: __init__.py  download_model.py  test_model_bundling.py
src/nixwhisper/transcriber/: __init__.py  base.py  config.py  faster_whisper_backend.py
src/nixwhisper/utils/: __init__.py  model.py  shell.py  transcription.py
tests/: conftest.py  test_basic.py  test_overlay_cursor_positioning.py  test_qt_gui.py  test_x11_cursor.py  test_x11_cursor_basic.py  test_x11_cursor_debouncing.py  test_x11_cursor_new.py  test_x11_cursor_polling.py  test_x11_cursor_simple.py  test_x11_cursor_window_focus.py
tests/e2e/: test_cli_workflow.py  test_recording_workflow.py
tests/integration/: test_audio_to_text.py  test_gui_integration.py
tests/unit/: test_audio.py  test_config.py  test_input.py  test_microphone.py  test_model_manager.py  test_transcriber.py  test_universal_typing.py  test_whisper_model.py
